2008-09-24 Quentin Mathe <qmathe@club-internet.fr>

	* Headers/COObject.h:
	* COObject.m:
	Removed kCOTagProperty, because tags will be implemented in term of groups.

2008-09-23 Quentin Mathe <qmathe@club-internet.fr>

	* Headers/COObjectContext.h:
	* COObjectContext.m:
	New notification named COObjectContextDidMergeObjectsNotification and the 
	related userInfo key COMergedObjectsKey.
	(-setDelegate, -delegate): Added.
	(-rollbackToVersion:): Modified to collect merged objects.
	(-[NSObject objectContextDidMergeObjects:]): Added.

2008-09-21 Quentin Mathe <qmathe@club-internet.fr>

	Implemented navigation in the history of object contexts with the new 
	method -rollbackToVersion:. History can now be navigated either per object 
	or per context; the object context plays the role of a pool of objects.
	* Headers/COMetadataServer.h:
	* COMetadataServer.m:
	(-executeRawPGSQLQuery:): Added as a low-level API for 
	-[COObjectContext rollbackToVersion:].
	* Headers/COObjectContext.h:
	* COObjectContext.m:
	Various documentation update. New ivar _revertingContext.
	(-rollbackToVersion:, -isRevertingContext): Added.
	(-undo, -redo): Added skeleton methods.
	* TestObjectContext.m 
	(-testOneStepContextRollback, -testMultiStepContextRollback): Added.

2008-09-17 Quentin Mathe <qmathe@club-internet.fr>

	Renamed methods -addObject:, -removeObject:, -objects in CODirectory, to 
	comply with latest changes done to COGroup protocol.
	* Headers/CODirectory.h:
	* CODirectory.m:
	(-addObject:): Renamed to -addMember:.
	(-removeObject:): Renamed -removeMember:.
	(-objects): Renamed -members.
	Kept these old methods as deprecated until all the code is updated.

2008-09-17 Quentin Mathe <qmathe@club-internet.fr>

	Renamed methods -addObject:, -removeObject:, -objects of COGroup protocol 
	and class to eliminate conflicts with Foundation collections that don't 
	return a boolean. This also solves the overlapping with ETCollection.
	* Headers/COCoreObjectProtocol.h: